<resources>
    <string name="app_name">PlusPlus</string>
    <string name="back_arrow">⇐</string>
    <string name="clear">CLR</string>
    <string name="_0">0</string>
    <string name="decimal">.</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="rpn">RPN</string>
    <string name="infix">INFIX</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="subtract">−</string>
    <string name="add">+</string>
    <string name="equals">=</string>
    <string name="enter">ENTER</string>
    <string name="delete">DEL</string>
    <string name="division_by_zero">÷0 has no meaning</string>
    <string name="lenny">( ͡° ͜ʖ ͡°)</string>
    <string name="save">SAVE</string>
</resources>
